test/errors/indexed_offsets_error/zs/logical_and_operator_in_array_expression_error.zs
package logical_and_operator_in_array_expression_error;

struct LogicalAndOperatorInArrayExpressionError
{
    uint32 offsets[];
offsets[@index && true]:
    string fields[];
};
